src/com/devsmart/StapleParser.java
// $ANTLR 3.4 /home/paul/workspace/Staple/src/com/devsmart/Staple.g 2012-08-29 00:04:51

package com.devsmart;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class StapleParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGS", "ASSIGN", "BLOCK", "CALL", "CLASS", "COMMENT", "CREATEOBJ", "EscapeSequence", "FIELDACCESS", "FIELDS", "FORMALARGS", "FUNCTION", "ID", "IMPORT", "INT", "LETTER", "LINE_COMMENT", "METHODS", "NOT", "PACKAGE", "StringLiteral", "THIS", "UNIT", "VARDEF", "WS", "'!'", "'!='", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'bool'", "'class'", "'extends'", "'import'", "'int'", "'new'", "'package'", "'this'", "'void'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int ARGS=4;
    public static final int ASSIGN=5;
    public static final int BLOCK=6;
    public static final int CALL=7;
    public static final int CLASS=8;
    public static final int COMMENT=9;
    public static final int CREATEOBJ=10;
    public static final int EscapeSequence=11;
    public static final int FIELDACCESS=12;
    public static final int FIELDS=13;
    public static final int FORMALARGS=14;
    public static final int FUNCTION=15;
    public static final int ID=16;
    public static final int IMPORT=17;
    public static final int INT=18;
    public static final int LETTER=19;
    public static final int LINE_COMMENT=20;
    public static final int METHODS=21;
    public static final int NOT=22;
    public static final int PACKAGE=23;
    public static final int StringLiteral=24;
    public static final int THIS=25;
    public static final int UNIT=26;
    public static final int VARDEF=27;
    public static final int WS=28;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public StapleParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public StapleParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return StapleParser.tokenNames; }
    public String getGrammarFileName() { return "/home/paul/workspace/Staple/src/com/devsmart/Staple.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        StapleTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compilationUnit"
    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:19:1: compilationUnit : ( packageDefinition )? ( importDefinition )* classDefinition -> ^( UNIT ( packageDefinition )? ( importDefinition )* classDefinition ) ;
    public final StapleParser.compilationUnit_return compilationUnit() throws RecognitionException {
        StapleParser.compilationUnit_return retval = new StapleParser.compilationUnit_return();
        retval.start = input.LT(1);


        StapleTree root_0 = null;

        StapleParser.packageDefinition_return packageDefinition1 =null;

        StapleParser.importDefinition_return importDefinition2 =null;

        StapleParser.classDefinition_return classDefinition3 =null;


        RewriteRuleSubtreeStream stream_importDefinition=new RewriteRuleSubtreeStream(adaptor,"rule importDefinition");
        RewriteRuleSubtreeStream stream_classDefinition=new RewriteRuleSubtreeStream(adaptor,"rule classDefinition");
        RewriteRuleSubtreeStream stream_packageDefinition=new RewriteRuleSubtreeStream(adaptor,"rule packageDefinition");
        try {
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:2: ( ( packageDefinition )? ( importDefinition )* classDefinition -> ^( UNIT ( packageDefinition )? ( importDefinition )* classDefinition ) )
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:4: ( packageDefinition )? ( importDefinition )* classDefinition
            {
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:4: ( packageDefinition )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==52) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:4: packageDefinition
                    {
                    pushFollow(FOLLOW_packageDefinition_in_compilationUnit106);
                    packageDefinition1=packageDefinition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_packageDefinition.add(packageDefinition1.getTree());

                    }
                    break;

            }


            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:23: ( importDefinition )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==49) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:23: importDefinition
            	    {
            	    pushFollow(FOLLOW_importDefinition_in_compilationUnit109);
            	    importDefinition2=importDefinition();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_importDefinition.add(importDefinition2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            pushFollow(FOLLOW_classDefinition_in_compilationUnit112);
            classDefinition3=classDefinition();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_classDefinition.add(classDefinition3.getTree());

            // AST REWRITE
            // elements: classDefinition, packageDefinition, importDefinition
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StapleTree)adaptor.nil();
            // 20:57: -> ^( UNIT ( packageDefinition )? ( importDefinition )* classDefinition )
            {
                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:60: ^( UNIT ( packageDefinition )? ( importDefinition )* classDefinition )
                {
                StapleTree root_1 = (StapleTree)adaptor.nil();
                root_1 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(UNIT, "UNIT")
                , root_1);

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:67: ( packageDefinition )?
                if ( stream_packageDefinition.hasNext() ) {
                    adaptor.addChild(root_1, stream_packageDefinition.nextTree());

                }
                stream_packageDefinition.reset();

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:20:86: ( importDefinition )*
                while ( stream_importDefinition.hasNext() ) {
                    adaptor.addChild(root_1, stream_importDefinition.nextTree());

                }
                stream_importDefinition.reset();

                adaptor.addChild(root_1, stream_classDefinition.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StapleTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StapleTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"


    public static class packageDefinition_return extends ParserRuleReturnScope {
        StapleTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "packageDefinition"
    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:23:1: packageDefinition : 'package' classname ';' -> ^( PACKAGE classname ) ;
    public final StapleParser.packageDefinition_return packageDefinition() throws RecognitionException {
        StapleParser.packageDefinition_return retval = new StapleParser.packageDefinition_return();
        retval.start = input.LT(1);


        StapleTree root_0 = null;

        Token string_literal4=null;
        Token char_literal6=null;
        StapleParser.classname_return classname5 =null;


        StapleTree string_literal4_tree=null;
        StapleTree char_literal6_tree=null;
        RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleSubtreeStream stream_classname=new RewriteRuleSubtreeStream(adaptor,"rule classname");
        try {
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:24:2: ( 'package' classname ';' -> ^( PACKAGE classname ) )
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:24:4: 'package' classname ';'
            {
            string_literal4=(Token)match(input,52,FOLLOW_52_in_packageDefinition138); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_52.add(string_literal4);


            pushFollow(FOLLOW_classname_in_packageDefinition140);
            classname5=classname();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_classname.add(classname5.getTree());

            char_literal6=(Token)match(input,39,FOLLOW_39_in_packageDefinition142); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_39.add(char_literal6);


            // AST REWRITE
            // elements: classname
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StapleTree)adaptor.nil();
            // 24:28: -> ^( PACKAGE classname )
            {
                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:24:31: ^( PACKAGE classname )
                {
                StapleTree root_1 = (StapleTree)adaptor.nil();
                root_1 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(PACKAGE, "PACKAGE")
                , root_1);

                adaptor.addChild(root_1, stream_classname.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StapleTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StapleTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "packageDefinition"


    public static class classname_return extends ParserRuleReturnScope {
        StapleTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classname"
    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:27:1: classname : ID ( '.' ID )* -> ( ID )+ ;
    public final StapleParser.classname_return classname() throws RecognitionException {
        StapleParser.classname_return retval = new StapleParser.classname_return();
        retval.start = input.LT(1);


        StapleTree root_0 = null;

        Token ID7=null;
        Token char_literal8=null;
        Token ID9=null;

        StapleTree ID7_tree=null;
        StapleTree char_literal8_tree=null;
        StapleTree ID9_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");

        try {
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:28:2: ( ID ( '.' ID )* -> ( ID )+ )
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:28:4: ID ( '.' ID )*
            {
            ID7=(Token)match(input,ID,FOLLOW_ID_in_classname162); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID7);


            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:28:7: ( '.' ID )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==37) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:28:8: '.' ID
            	    {
            	    char_literal8=(Token)match(input,37,FOLLOW_37_in_classname165); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_37.add(char_literal8);


            	    ID9=(Token)match(input,ID,FOLLOW_ID_in_classname167); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_ID.add(ID9);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // AST REWRITE
            // elements: ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StapleTree)adaptor.nil();
            // 28:17: -> ( ID )+
            {
                if ( !(stream_ID.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_ID.hasNext() ) {
                    adaptor.addChild(root_0, 
                    stream_ID.nextNode()
                    );

                }
                stream_ID.reset();

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StapleTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StapleTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classname"


    public static class importDefinition_return extends ParserRuleReturnScope {
        StapleTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "importDefinition"
    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:31:1: importDefinition : 'import' classname ';' -> ^( IMPORT classname ) ;
    public final StapleParser.importDefinition_return importDefinition() throws RecognitionException {
        StapleParser.importDefinition_return retval = new StapleParser.importDefinition_return();
        retval.start = input.LT(1);


        StapleTree root_0 = null;

        Token string_literal10=null;
        Token char_literal12=null;
        StapleParser.classname_return classname11 =null;


        StapleTree string_literal10_tree=null;
        StapleTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleSubtreeStream stream_classname=new RewriteRuleSubtreeStream(adaptor,"rule classname");
        try {
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:32:2: ( 'import' classname ';' -> ^( IMPORT classname ) )
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:32:4: 'import' classname ';'
            {
            string_literal10=(Token)match(input,49,FOLLOW_49_in_importDefinition185); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_49.add(string_literal10);


            pushFollow(FOLLOW_classname_in_importDefinition187);
            classname11=classname();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_classname.add(classname11.getTree());

            char_literal12=(Token)match(input,39,FOLLOW_39_in_importDefinition189); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_39.add(char_literal12);


            // AST REWRITE
            // elements: classname
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StapleTree)adaptor.nil();
            // 32:27: -> ^( IMPORT classname )
            {
                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:32:30: ^( IMPORT classname )
                {
                StapleTree root_1 = (StapleTree)adaptor.nil();
                root_1 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(IMPORT, "IMPORT")
                , root_1);

                adaptor.addChild(root_1, stream_classname.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (StapleTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (StapleTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "importDefinition"


    public static class classDefinition_return extends ParserRuleReturnScope {
        StapleTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classDefinition"
    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:35:1: classDefinition : 'class' cname= ID ( 'extends' sup= ID )? '{' ( fieldDefinition | methodDefinition )* '}' -> {$sup!=null}? ^( CLASS $cname $sup ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) ) -> ^( CLASS $cname ID[\"staple.runtime.object\"] ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) ) ;
    public final StapleParser.classDefinition_return classDefinition() throws RecognitionException {
        StapleParser.classDefinition_return retval = new StapleParser.classDefinition_return();
        retval.start = input.LT(1);


        StapleTree root_0 = null;

        Token cname=null;
        Token sup=null;
        Token string_literal13=null;
        Token string_literal14=null;
        Token char_literal15=null;
        Token char_literal18=null;
        StapleParser.fieldDefinition_return fieldDefinition16 =null;

        StapleParser.methodDefinition_return methodDefinition17 =null;


        StapleTree cname_tree=null;
        StapleTree sup_tree=null;
        StapleTree string_literal13_tree=null;
        StapleTree string_literal14_tree=null;
        StapleTree char_literal15_tree=null;
        StapleTree char_literal18_tree=null;
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_56=new RewriteRuleTokenStream(adaptor,"token 56");
        RewriteRuleTokenStream stream_55=new RewriteRuleTokenStream(adaptor,"token 55");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_methodDefinition=new RewriteRuleSubtreeStream(adaptor,"rule methodDefinition");
        RewriteRuleSubtreeStream stream_fieldDefinition=new RewriteRuleSubtreeStream(adaptor,"rule fieldDefinition");
        try {
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:36:2: ( 'class' cname= ID ( 'extends' sup= ID )? '{' ( fieldDefinition | methodDefinition )* '}' -> {$sup!=null}? ^( CLASS $cname $sup ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) ) -> ^( CLASS $cname ID[\"staple.runtime.object\"] ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) ) )
            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:36:4: 'class' cname= ID ( 'extends' sup= ID )? '{' ( fieldDefinition | methodDefinition )* '}'
            {
            string_literal13=(Token)match(input,47,FOLLOW_47_in_classDefinition209); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_47.add(string_literal13);


            cname=(Token)match(input,ID,FOLLOW_ID_in_classDefinition213); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(cname);


            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:37:3: ( 'extends' sup= ID )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==48) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:37:4: 'extends' sup= ID
                    {
                    string_literal14=(Token)match(input,48,FOLLOW_48_in_classDefinition218); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_48.add(string_literal14);


                    sup=(Token)match(input,ID,FOLLOW_ID_in_classDefinition222); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(sup);


                    }
                    break;

            }


            char_literal15=(Token)match(input,55,FOLLOW_55_in_classDefinition228); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_55.add(char_literal15);


            // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:39:3: ( fieldDefinition | methodDefinition )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID||LA5_0==46||LA5_0==50||LA5_0==54) ) {
                    int LA5_2 = input.LA(2);

                    if ( (LA5_2==ID) ) {
                        int LA5_3 = input.LA(3);

                        if ( (LA5_3==39) ) {
                            alt5=1;
                        }
                        else if ( (LA5_3==31) ) {
                            alt5=2;
                        }


                    }


                }


                switch (alt5) {
            	case 1 :
            	    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:39:5: fieldDefinition
            	    {
            	    pushFollow(FOLLOW_fieldDefinition_in_classDefinition235);
            	    fieldDefinition16=fieldDefinition();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_fieldDefinition.add(fieldDefinition16.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:40:5: methodDefinition
            	    {
            	    pushFollow(FOLLOW_methodDefinition_in_classDefinition241);
            	    methodDefinition17=methodDefinition();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_methodDefinition.add(methodDefinition17.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            char_literal18=(Token)match(input,56,FOLLOW_56_in_classDefinition250); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_56.add(char_literal18);


            // AST REWRITE
            // elements: ID, methodDefinition, fieldDefinition, cname, cname, methodDefinition, fieldDefinition, sup
            // token labels: sup, cname
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleTokenStream stream_sup=new RewriteRuleTokenStream(adaptor,"token sup",sup);
            RewriteRuleTokenStream stream_cname=new RewriteRuleTokenStream(adaptor,"token cname",cname);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (StapleTree)adaptor.nil();
            // 43:3: -> {$sup!=null}? ^( CLASS $cname $sup ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) )
            if (sup!=null) {
                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:43:20: ^( CLASS $cname $sup ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) )
                {
                StapleTree root_1 = (StapleTree)adaptor.nil();
                root_1 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(CLASS, "CLASS")
                , root_1);

                adaptor.addChild(root_1, stream_cname.nextNode());

                adaptor.addChild(root_1, stream_sup.nextNode());

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:43:40: ^( FIELDS ( fieldDefinition )* )
                {
                StapleTree root_2 = (StapleTree)adaptor.nil();
                root_2 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(FIELDS, "FIELDS")
                , root_2);

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:43:49: ( fieldDefinition )*
                while ( stream_fieldDefinition.hasNext() ) {
                    adaptor.addChild(root_2, stream_fieldDefinition.nextTree());

                }
                stream_fieldDefinition.reset();

                adaptor.addChild(root_1, root_2);
                }

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:43:67: ^( METHODS ( methodDefinition )* )
                {
                StapleTree root_2 = (StapleTree)adaptor.nil();
                root_2 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(METHODS, "METHODS")
                , root_2);

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:43:77: ( methodDefinition )*
                while ( stream_methodDefinition.hasNext() ) {
                    adaptor.addChild(root_2, stream_methodDefinition.nextTree());

                }
                stream_methodDefinition.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            else // 44:3: -> ^( CLASS $cname ID[\"staple.runtime.object\"] ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) )
            {
                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:44:6: ^( CLASS $cname ID[\"staple.runtime.object\"] ^( FIELDS ( fieldDefinition )* ) ^( METHODS ( methodDefinition )* ) )
                {
                StapleTree root_1 = (StapleTree)adaptor.nil();
                root_1 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(CLASS, "CLASS")
                , root_1);

                adaptor.addChild(root_1, stream_cname.nextNode());

                adaptor.addChild(root_1, 
                (StapleTree)adaptor.create(ID, "staple.runtime.object")
                );

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:44:49: ^( FIELDS ( fieldDefinition )* )
                {
                StapleTree root_2 = (StapleTree)adaptor.nil();
                root_2 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(FIELDS, "FIELDS")
                , root_2);

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:44:58: ( fieldDefinition )*
                while ( stream_fieldDefinition.hasNext() ) {
                    adaptor.addChild(root_2, stream_fieldDefinition.nextTree());

                }
                stream_fieldDefinition.reset();

                adaptor.addChild(root_1, root_2);
                }

                // /home/paul/workspace/Staple/src/com/devsmart/Staple.g:44:76: ^( METHODS ( methodDefinition )* )
                {
                StapleTree root_2 = (StapleTree)adaptor.nil();
                root_2 = (StapleTree)adaptor.becomeRoot(
                (StapleTree)adaptor.create(METHODS, "METHODS")
                , root_2);
